# smash-scores-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  test_query.graphql
src/: lib.rs  main.rs
src/api/: index.rs
src/model/: mod.rs
src/model/tennis/: match_settings.rs  mod.rs  opponents.rs  player.rs  rule_set.rs  score.rs  shared.rs  tennis_match.rs
src/schema/: match_info.rs  mod.rs  tennis_match_schema.rs
src/shared/: graphql_error.rs  mod.rs
tests/: smash_scores_test.rs
