[package]
name = "smash-scores-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
async-graphql = "5.0.5"
async-graphql-actix-web = "5.0.5"
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
serde = {version = "1.0.150",  features = ["derive"] }
serde_json = "1.0.89"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
log = "0"
env_logger = "0"
actix-http = "3.2.2"
slab = "0.4.7"
futures-util = "0.3.25"
futures = "0.3.25"
derive_more = "0.99.17"
uuid7 = "0.3.4"
